--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>co.develhope</groupId>
 	<artifactId>deploy</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.3</version>
 	<name>deploy</name>
 	<description>Demo project for deploy</description>
 	<properties>
